--- a/.github/workflows/issue-label-bot.yml
+++ b/.github/workflows/issue-label-bot.yml
@@ -1,4 +1,4 @@
-name: Issue Label Bot
+name: Issue Label Comment Bot
 
 on:
   issues:
@@ -7,41 +7,25 @@ on:
 jobs:
   comment-on-label:
     runs-on: ubuntu-latest
-    permissions:
-      issues: write
     steps:
-      - name: Comment for wontfix label
-        if: github.event.label.name == 'wontfix'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'After review, we have decided not to address this issue at this time.'
-            })
-      
-      - name: Comment for enhancement label
-        if: github.event.label.name == 'enhancement'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Thanks for the enhancement suggestion! We appreciate your input.'
-            })
-      
-      - name: Comment for feature label
-        if: github.event.label.name == 'feature'
-        uses: actions/github-script@v7
-        with:
-          script: |
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: 'Thank you for the feature request. We will consider including this in a future release.'
-            })
+      - name: Check label and comment
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ISSUE_NUMBER: ${{ github.event.issue.number }}
+          LABEL_NAME: ${{ github.event.label.name }}
+        run: |
+          if [ "$LABEL_NAME" = "wontfix" ]; then
+            COMMENT="After review, we have decided not to address this issue at this time."
+          elif [ "$LABEL_NAME" = "enhancement" ]; then
+            COMMENT="Thanks for the enhancement suggestion! We appreciate your input."
+          elif [ "$LABEL_NAME" = "feature" ]; then
+            COMMENT="Thank you for the feature request. We will consider including this in a future release."
+          else
+            echo "No comment for label: $LABEL_NAME"
+            exit 0
+          fi
+          curl -X POST \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${{ github.repository }}/issues/$ISSUE_NUMBER/comments \
+            -d "{\"body\":\"$COMMENT\"}"
